fixed nav bar and header spacing

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -32,9 +32,9 @@ body {
 
 nav {
     width: 100vw;
-    height: 75px;
+    height: 55px;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
 }
 
@@ -42,7 +42,7 @@ nav .nav-container {
     width: 350px;
     text-align: center;
     display:flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 nav a{
@@ -124,7 +124,7 @@ header img {
     z-index: 0;
     width: 300px;
     position: absolute;
-    top: 190px;
+    top: 250px;
     left: calc(60% - 150px);
     
 }
@@ -153,7 +153,7 @@ footer img {
     padding: 10px 15px;
     position: absolute;
     left: 20px;
-    top: 50px;
+    top: 120px;
     z-index: 1;
 }
 
@@ -264,7 +264,7 @@ footer div {
     header img {
         z-index: 0;
         width: 400px;
-        top: 230px;
+        top: 320px;
         left: calc(100% - 450px);
         
     }
@@ -289,7 +289,7 @@ footer div {
         padding: 10px 15px;
         position: absolute;
         left: 20px;
-        top: 50px;
+        top: 125px;
         z-index: 1;
     }
     
@@ -368,7 +368,7 @@ footer div {
     header img {
         z-index: 0;
         width: 500px;
-        top: 175px;
+        top: 350px;
         left: 10%;
         right: 90%;
         
@@ -381,7 +381,7 @@ footer div {
         padding: 10px 15px;
         position: absolute;
         left: calc(85% - 450px);
-        top: 50px;
+        top: 200px;
         z-index: 1;
     }
     
